# music-tagger

./: .gitignore  DEPLOYMENT-REMOTE.md  README.md  SOLUTION.md  config.yaml  music-tagger-remote  pyproject.toml  run-remote.py  verify-remote.sh
data/: .gitkeep
music_tagger/: __init__.py  cli.py  cli_ssh.py  config.py  db.py  extractor.py  lyrics.py  mcp_server.py  pipeline.py  renamer.py  scanner.py  tagger.py
music_tagger/matcher/: __init__.py  qq_music.py
